# container-structure-test

./: .bazelrc  .goreleaser.yaml  BUILD.bazel  MODULE.bazel  README.md  defs.bzl  go.mod  go.sum  repositories.bzl
.github/workflows/: bazel.yaml  integration-tests.yml  release.yml
bazel/: BUILD.bazel  container_structure_test.bzl
bazel/docs/: defs.md
bazel/test/: .bazelrc  MODULE.bazel  README.md  WORKSPACE.bazel  go_deps.bzl
cmd/container-structure-test/: BUILD.bazel
cmd/container-structure-test/app/: BUILD.bazel
cmd/container-structure-test/app/cmd/: BUILD.bazel  test.go
cmd/container-structure-test/app/cmd/test/: BUILD.bazel  util.go  util_test.go
cmd/container-structure-test/app/flags/: BUILD.bazel
internal/pkgutil/: BUILD.bazel  image_utils.go  image_utils_test.go  oci_layout.go  root_path.go  tar_utils.go  tar_utils_test.go
pkg/color/: BUILD.bazel
pkg/config/: BUILD.bazel  options.go
pkg/drivers/: BUILD.bazel  docker_driver.go  driver.go  driver_test.go  host_driver.go  tar_driver.go  tar_driver_test.go
pkg/output/: BUILD.bazel
pkg/types/: BUILD.bazel
pkg/types/unversioned/: BUILD.bazel  types.go
pkg/types/v1/: BUILD.bazel  file_existence.go  file_existence_test.go  licenses.go
pkg/types/v2/: BUILD.bazel  file_existence.go  licenses.go  metadata.go  metadata_test.go
pkg/utils/: BUILD.bazel  utils.go
pkg/version/: BUILD.bazel
tests/: structure_test_tests.sh
tests/amd64/: ubuntu_22_04_containeropts_test.yaml  ubuntu_22_04_tar_test.yaml
tests/arm64/: ubuntu_22_04_containeropts_network_host_test.yaml
tests/ppc64le/: ubuntu_22_04_containeropts_network_none_test.yaml
tests/s390x/: ubuntu_22_04_tar_test.yaml
testutil/: BUILD.bazel
