load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "test",
    srcs = ["util.go"],
    importpath = "github.com/GoogleContainerTools/container-structure-test/cmd/container-structure-test/app/cmd/test",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config",
        "//pkg/drivers",
        "//pkg/output",
        "//pkg/types",
        "//pkg/types/unversioned",
        "@com_github_pkg_errors//:errors",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)

go_test(
    name = "test_test",
    srcs = ["util_test.go"],
    embed = [":test"],
    deps = ["//pkg/types/unversioned"],
)
